syntax = "proto3";

option java_package = "com.wait.simplescript.lib";
option java_multiple_files = true;
option java_outer_classname = "AuthProto";


service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignUpResponse) {}
}

message SignUpRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  repeated string roles = 5;
}


message SignUpResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  repeated string roles = 5;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}